Format files with prettier

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,51 +1,86 @@
 {{ define "page" }}
-<article class="container">
-  {{ if ne .Kind "home" }}
-  <a href="{{ .Site.Home.RelPermalink }}">Home</a>
-  {{ end }}
-  <h1>{{ .Title }}</h1>
-  {{ .Content }} {{ range .Sections }} {{ if ne .Section "weeks" }}
-  <h2><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
-  <ul>
-    {{ range .Pages }}
-    <li>
-      <a href="{{ .RelPermalink }}">
-        {{ if .Title }} {{ .Title }} {{ else }} {{ $path := .RelPermalink }} {{
-        $parts := split $path "/" }} {{ range $parts }} {{ if (findRE
-        "^\\d{4}-\\d{2}-\\d{2}$" .) }} Week ending in {{ . }} {{ end }} {{ end
-        }} {{ end }}
-      </a>
-    </li>
+  <article class="container">
+    {{ if ne .Kind "home" }}
+      <a href="{{ .Site.Home.RelPermalink }}">Home</a>
     {{ end }}
-  </ul>
-  {{ end }} {{ end }} {{ $weeksSection := .Site.GetPage "section" "weeks" }} {{
-  if $weeksSection }}
-  <ol>
-    {{ range $weeksSection.Pages }}
-    <li>
-      <a href="{{ .RelPermalink }}">
-        {{ if .Title }} {{ .Title }} {{ else }} {{ $path := .RelPermalink }} {{
-        $parts := split $path "/" }} {{ range $parts }} {{ if (findRE
-        "^\\d{4}-\\d{2}-\\d{2}$" .) }} Week ending in {{ . }} {{ end }} {{ end
-        }} {{ end }}
-      </a>
-    </li>
+    <h1>{{ .Title }}</h1>
+    {{ .Content }}
+    {{ range .Sections }}
+      {{ if ne .Section "weeks" }}
+        <h2><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
+        <ul>
+          {{ range .Pages }}
+            <li>
+              <a href="{{ .RelPermalink }}">
+                {{ if .Title }}
+                  {{ .Title }}
+                {{ else }}
+                  {{ $path := .RelPermalink }}
+                  {{ $parts := split $path "/" }}
+                  {{ range $parts }}
+                    {{ if (findRE
+                      "^\\d{4}-\\d{2}-\\d{2}$" .)
+                    }}
+                      Week ending in
+                      {{ . }}
+                    {{ end }}
+                  {{ end }}
+                {{ end }}
+              </a>
+            </li>
+          {{ end }}
+        </ul>
+      {{ end }}
     {{ end }}
-  </ol>
-  {{ end }} {{ if .RegularPages }}
-  <h2>Other</h2>
-  <ul>
-    {{ range .RegularPages }}
-    <li>
-      <a href="{{ .RelPermalink }}">
-        {{ if .Title }} {{ .Title }} {{ else }} {{ $path := .RelPermalink }} {{
-        $parts := split $path "/" }} {{ range $parts }} {{ if (findRE
-        "^\\d{4}-\\d{2}-\\d{2}$" .) }} Week ending in {{ . }} {{ end }} {{ end
-        }} {{ end }}
-      </a>
-    </li>
+    {{ $weeksSection := .Site.GetPage "section" "weeks" }}
+    {{ if $weeksSection }}
+      <ol>
+        {{ range $weeksSection.Pages }}
+          <li>
+            <a href="{{ .RelPermalink }}">
+              {{ if .Title }}
+                {{ .Title }}
+              {{ else }}
+                {{ $path := .RelPermalink }}
+                {{ $parts := split $path "/" }}
+                {{ range $parts }}
+                  {{ if (findRE
+                    "^\\d{4}-\\d{2}-\\d{2}$" .)
+                  }}
+                    Week ending in
+                    {{ . }}
+                  {{ end }}
+                {{ end }}
+              {{ end }}
+            </a>
+          </li>
+        {{ end }}
+      </ol>
     {{ end }}
-  </ul>
-  {{ end }}
-</article>
+    {{ if .RegularPages }}
+      <h2>Other</h2>
+      <ul>
+        {{ range .RegularPages }}
+          <li>
+            <a href="{{ .RelPermalink }}">
+              {{ if .Title }}
+                {{ .Title }}
+              {{ else }}
+                {{ $path := .RelPermalink }}
+                {{ $parts := split $path "/" }}
+                {{ range $parts }}
+                  {{ if (findRE
+                    "^\\d{4}-\\d{2}-\\d{2}$" .)
+                  }}
+                    Week ending in
+                    {{ . }}
+                  {{ end }}
+                {{ end }}
+              {{ end }}
+            </a>
+          </li>
+        {{ end }}
+      </ul>
+    {{ end }}
+  </article>
 {{ end }}
