--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,10 +1,15 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ or .Title .Site.Title }}{{ if ne .Kind "home" }} | {{ .CurrentSection.Title }}{{ end }}</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>
+      {{ or .Title .Site.Title }}{{ if ne .Kind "home" }}
+        |
+        {{ .CurrentSection.Title }}
+      {{ end }}
+    </title>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     {{ block "page" . }}{{ end }}
